--- a/styles/drbrigadeiro.css
+++ b/styles/drbrigadeiro.css
@@ -1,28 +1,65 @@
 
-
 * {
  margin: 0;
  padding: 0;
  box-sizing: border-box; 
+ font-family: "Amaranth", sans-serif;
+ font-weight: 300;
+ font-style: normal;
 }
 
 body {
-    background-color: beige;
+    background-color: white;  
+}
+
+.rodateto {
+    width: 100%;
+    height: 120px;
 }
 
 .logo {
-    color: purple;
-    font-size: 20pt;
+    width: 250px;
+    height: 100%;
+       
 }
 
 .btn {
     border: none;
-    background-color: purple;
+    background-color: #F08080;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px 12px;
     border-radius: 15px;
-    box-shadow: 0px 0px 10px  2px black;
     cursor: pointer;
 }
+
+
+
+.home {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 160px;
+}
+
+.contrate  {
+    border-radius: 15px;
+    background-color: green;
+    width: 120px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.teste_dois {
+    display: grid;
+    justify-content: center; 
+    align-items: center;
+    margin: 30px    ;
+}
+
+
